# OptiTake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: gcc_linux.yml
src/: Board.cpp  Board.h  CMakeLists.txt  CommandLinePlayer.cpp  CommandLinePlayer.h  OptimalSolutionPlayer.cpp  OptimalSolutionPlayer.h  Player.cpp  Player.h  RandomPlayer.cpp  RandomPlayer.h  RemainingTiles.cpp  RemainingTiles.h  Tile.cpp  Tile.h
test/: BoardTests.cpp  CMakeLists.txt  OptimalSolutionPlayerTests.cpp
